--- a/wiki-page-1/index.html
+++ b/wiki-page-1/index.html
@@ -15,20 +15,20 @@
        
        <p>
 
-       <b>Crown shyness</b> (also canopy disengagement,[1] canopy shyness,
-       [2] or inter-crown spacing[3]<sub>) is a phenomenon observed in 
+       <b>Crown shyness</b> (also canopy disengagement,[1<sub>] canopy shyness,
+       [2<sub>] or inter-crown spacing[3]<sub>) is a phenomenon observed in 
        some tree species, in which the crowns of fully stocked trees 
        do not touch each other, forming a canopy with channel-like 
-       gaps.[4][5] The phenomenon is most prevalent among trees of 
+       gaps.[4<sub>][5<sub>] The phenomenon is most prevalent among trees of 
        the same species, but also occurs between trees of different 
-       species.[6][7] There exist many hypotheses as to why crown 
+       species.[6<sub>][7<sub>] There exist many hypotheses as to why crown 
        shyness is an adaptive behavior, and research suggests that 
        it might inhibit spread of leaf-eating insect larvae.[8]
        </p>
 
        <h1>Possible physiological explanations</h1>
         <hr>
-        <img
+        <img src="images/trees.jpg" alt="long trees" width="568px">
         
         <p>
             The exact physiological basis of crown shyness is uncertain.[6] 
