--- a/wiki-page-1/index.html
+++ b/wiki-page-1/index.html
@@ -23,7 +23,7 @@
        the same species, but also occurs between trees of different 
        species.[6<sub>][7<sub>] There exist many hypotheses as to why crown 
        shyness is an adaptive behavior, and research suggests that 
-       it might inhibit spread of leaf-eating insect larvae.[8]
+       it might inhibit spread of leaf-eating insect larvae.[8<sub>]
        </p>
 
        <h1>Possible physiological explanations</h1>
@@ -48,10 +48,10 @@
             [10] If the crowns are artificially prevented from colliding in 
             the winds, they gradually fill the canopy gaps.[11] This explains 
             instances of crown shyness between branches of the same organism.
-             Proponents of this idea cite that shyness is particularly seen 
-             in conditions conducive to this pruning, including windy forests,
-              stands of flexible trees, and early succession forests where 
-              branches are flexible and limited in lateral movement.
+            Proponents of this idea cite that shyness is particularly seen 
+            in conditions conducive to this pruning, including windy forests,
+            stands of flexible trees, and early succession forests where 
+            branches are flexible and limited in lateral movement.
         </p>      
     </body>
     </html>
