--- a/Album-Listings/index.html
+++ b/Album-Listings/index.html
@@ -74,7 +74,7 @@
         </ol>
         <br><br><br><br><br><br><br><br><br><br><br><br>
 
-        <b>Currently Playing:</b>
+        <b>Next To Album Play:</b>
         <br><br><br><br>
 
         <img 
@@ -140,10 +140,9 @@
                 I Believe 5:03
             </li>
         </ol>
-        <br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br>
 
-        <b>Currently Playing:</b>
+        <b>Coming Up:</b>
         <br><br><br><br>
        
         <img 
@@ -152,7 +151,7 @@
             width="568px"
         >
         <p> 
-            <b>Now Playing:</b> 
+            <b>Coming Up:</b> 
             Superstar
         </p>
         <hr>            
