--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -139,135 +139,151 @@
             </li>         
             <li>    
                 Tandoori Chicken Naan Wraps
-            </li>      
-            <p>
-                If you tried this recipe and loved it, drop by down below 
-                and let me know how you liked it with a rating and comment! 
-                Feel free to also leave a question there about this recipe
-                and I’ll get right back to it.To see more recipes and 
-                behind-the-scenes, follow along on Instagram and Youtube!
-                I’m also now on Pinterest pinning away so stop by and see
-                what’s up.  
-            </p>  
-            <h3>Dinner | Main Course</h3>
-            <h1>Honey Jalapeno Chicken</h1>
-            <p>
-                Sweet, spicy, and slightly crispy – this honey jalapeño
-                chicken is the perfect combo of bold and delicious! Juicy 
-                chicken is coated in a sticky glaze that perfectly balances 
-                the heat of jalapeños with the sweetness of honey. Trust me, 
-                it’s better than any takeaway!
-            </p>  
+            </li> 
+        </ul>     
+        <p>
+            If you tried this recipe and loved it, drop by down below 
+            and let me know how you liked it with a rating and comment! 
+            Feel free to also leave a question there about this recipe
+            and I’ll get right back to it.To see more recipes and 
+            behind-the-scenes, follow along on Instagram and Youtube!
+            I’m also now on Pinterest pinning away so stop by and see
+            what’s up.  
+        </p>  
+        <h3>Dinner | Main Course</h3>
+        <h1>Honey Jalapeno Chicken</h1>
+        <p>
+            Sweet, spicy, and slightly crispy – this honey jalapeño
+            chicken is the perfect combo of bold and delicious! Juicy 
+            chicken is coated in a sticky glaze that perfectly balances 
+            the heat of jalapeños with the sweetness of honey. Trust me, 
+            it’s better than any takeaway!
+        </p>  
             
-            <br>Prep Time: 20 minutes    <br>Cook Time: 25 minutes
-            <br>Total Time: 45 minutes  <br>Yields: 4 to 5
-            <hr>
-            <h1> Ingredients</h1>
-            <p>CHICKEN</p>
-            <ul>
-                <li>    
-                    1 1/2 pounds chicken thighs, boneless and skinless, 
-                    chopped into bite-sized pieces
-                </li>
-                <li>    
-                    1/3 cup cornstarch
-                </li>
-                <li>    
-                    1 teaspoon chili powder
-                </li>   
-                <li>    
-                    1 teaspoon salt
-                </li>       
-                <li>    
-                    1/2 teaspoon black pepper
-                </li>      
-                <li>    
-                    2 tablespoons neutral oil
-                </li> 
-            </ul>        
-            <p>SAUCE</p>
-            <ul>
-                <li>    
-                    3 tablespoons honey
-                </li>
-                <li>    
-                    1 tablespoon brown sugar
-                </li>
-                <li>    
-                    1/4 cup soy sauce
-                </li>     
-                <li>    
-                    1/4 cup water
-                </li>           
-                <li>    
-                    1 tablespoon rice vinegar
-                </li>      
-                <li>    
-                    1 tablespoon minced garlic
-                </li> 
-                <li>    
-                    2 teaspoons ginger paste
-                </li>          
-                <li>    
-                    1/2 teaspoon sesame oil
-                </li>      
-                <li>    
-                    2 teaspoons cornstarch
-                </li> 
-            </ul> 
-            <p>VEGETABLES</p>
-            <ul>
-                <li>    
-                    1/2 yellow onion, sliced
-                </li>
-                <li>    
-                    2 jalapeños, sliced and seeds removed
-                </li>
-                <p>GARNISH</p>   
-                <ul>         
-                    <li>    
-                        2 tablespoons chopped fresh cilantro
-                    </li>  
-                    <li>    
-                        green onions, chopped
-                    </li>          
-                    <li>    
-                        toasted sesame seeds
-                    </li>       
-                </ul>
-                <h1>INGREDIENTS</h1>
-                <ol>
-                    1.<b>Prepare the Chicken</b>: In a bowl, toss the chopped 
-                    chicken thighs with cornstarch, salt, and black pepper until 
-                    evenly coated.
+        <br>Prep Time: 20 minutes    <br>Cook Time: 25 minutes
+        <br>Total Time: 45 minutes  <br>Yields: 4 to 5
+        <hr>
+        <h1> Ingredients</h1>
+        <p>CHICKEN</p>
+        <ul>
+            <li>    
+                1 1/2 pounds chicken thighs, boneless and skinless, 
+                chopped into bite-sized pieces
+            </li>
+            <li>    
+                1/3 cup cornstarch
+            </li>
+            <li>    
+                1 teaspoon chili powder
+            </li>   
+            <li>    
+                1 teaspoon salt
+            </li>       
+            <li>    
+                1/2 teaspoon black pepper
+            </li>      
+            <li>    
+                2 tablespoons neutral oil
+            </li> 
+        </ul>        
+        <p>SAUCE</p>
+        <ul>
+            <li>    
+                3 tablespoons honey
+            </li>
+            <li>    
+                1 tablespoon brown sugar
+            </li>
+            <li>    
+                1/4 cup soy sauce
+            </li>     
+            <li>    
+                1/4 cup water
+            </li>           
+            <li>    
+                1 tablespoon rice vinegar
+            </li>      
+            <li>    
+                1 tablespoon minced garlic
+            </li> 
+            <li>    
+                2 teaspoons ginger paste
+            </li>          
+            <li>    
+                1/2 teaspoon sesame oil
+            </li>      
+            <li>    
+                2 teaspoons cornstarch
+            </li> 
+        </ul> 
+        <p>VEGETABLES</p>
+        <ul>
+            <li>    
+                1/2 yellow onion, sliced
+            </li>
+            <li>    
+                2 jalapeños, sliced and seeds removed
+            </li>
+        </ul>
+        <p>GARNISH</p>   
+        <ul>         
+            <li>    
+                2 tablespoons chopped fresh cilantro
+            </li>  
+            <li>    
+                green onions, chopped
+            </li>          
+            <li>    
+                toasted sesame seeds
+            </li>       
+        </ul>
+        <h1>INGREDIENTS</h1>
+        <ol>
+            <li>
+                <b>Prepare the Chicken</b>: In a bowl, toss the chopped 
+                chicken thighs with cornstarch, salt, and black pepper until 
+                evenly coated.
+            </li>
 
-                    2.<b>Cook the Chicken</b>: Heat the neutral oil in a large 
-                    skillet or wok over medium-high heat. Add the chicken in 
-                    batches if necessary, and cook until golden brown and 
-                    crispy on theoutside and cooked through on the inside,about
-                    6-8 minutes.Remove the chicken from the pan and set aside.
+            <li>
+                <b>Cook the Chicken</b>: Heat the neutral oil in a large 
+                skillet or wok over medium-high heat. Add the chicken in 
+                batches if necessary, and cook until golden brown and 
+                crispy on theoutside and cooked through on the inside,about
+                6-8 minutes.Remove the chicken from the pan and set aside.
+            </li>
 
-                    3.<b>Cook the Vegetables</b>: In the same pan, add the 
-                    sliced onion and jalapeños. Sauté for 2-3 minutes until 
-                    the vegetables ares lightly softened but still vibrant. 
-                    Remove the vegetables from the pan and set aside. 
+            <li> 
+                <b>Cook the Vegetables</b>: In the same pan, add the 
+                sliced onion and jalapeños. Sauté for 2-3 minutes until 
+                the vegetables ares lightly softened but still vibrant. 
+                Remove the vegetables from the pan and set aside.
+            </li> 
 
-                    4.<b>Prepare the Sauce</b>: In a bowl, whisk together the 
-                    brown sugar, soy sauce, rice vinegar, sesame oil, water,
-                    and cornstarch until combined.
+            <li>
+                <b>Prepare the Sauce</b>: In a bowl, whisk together the 
+                brown sugar, soy sauce, rice vinegar, sesame oil, water,
+                and cornstarch until combined.
+            </li>
 
-                    5.<b>Thicken the Sauce</b> Return the skillet to medium 
-                    heat and pour in the sauce. Cook for a few minutes, 
-                    stirring continuously, until the sauce thickens.
+            <li>
+                <b>Thicken the Sauce</b> Return the skillet to medium 
+                heat and pour in the sauce. Cook for a few minutes, 
+                stirring continuously, until the sauce thickens.
+            </li>
 
-                    6.<b>Combine and Finish</b> Add the cooked chicken 
-                    and vegetables back into the skillet, tossing to coat 
-                    everything evenly in the sauce. Cook for an additional 
-                    1-2 minutes to heat through.
+            <li>
+                <b>Combine and Finish</b> Add the cooked chicken 
+                and vegetables back into the skillet, tossing to coat 
+                everything evenly in the sauce. Cook for an additional 
+                1-2 minutes to heat through.
+            </li>
 
-                    7.<b>Garnish and Serve</b> Remove from heat and stir in the 
-                    chopped cilantro. Garnish with green onions and sesame
-                    seeds. Serve hot with rice or your favorite side.
-    
+            <li>
+                <b>Garnish and Serve</b> Remove from heat and stir in the 
+                chopped cilantro. Garnish with green onions and sesame
+                seeds. Serve hot with rice or your favorite side.
+            </li>
+        </ol>
     </body>
 </html>
