--- a/exercises/color-palettes/index.html
+++ b/exercises/color-palettes/index.html
@@ -7,21 +7,42 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h2 id="palette-1-heading">Beach Sunset</h2>
-        <div id="palette-1-color-1">
-         <h3 id="palette-1-heading-2">
-            Battleship Grey</h3>
-         <h5>#878787</h5>
+        <h2 id="palette-1-heading">Earth Tone</h2>
+        <div id="p1-c1">
+         <h3>Dark green</h3>
+         <h5>#16302B</h5>
         </div>
-        <div id="palette-1-color-2">
-           <h3 id="palette-1-heading-3">
-            Mountbatten pink</h3>
-            <h5>#A08794</h5>
+        <div id="p1-c2">
+           <h3>Steel blue</h3>
+            <h5>#2D7DD2</h5>
         </div>
-        <div id="palette-1-color-3">
-            <h3 id="palette-1-heading-4">
-                Puce</h3>
-            <h5>#BB7E8C</h5>
+        <div id="p1-c3">
+            <h3>Cambridge blue</h3>
+            <h5>#9BC4BC</h5>
+        </div>
+        <div id="p1-c4">
+            <h3>Nyanza</h3>
+            <h5>#D3FFE9</h5>
+        </div>
+        <div id="p1-c5">
+            <h3>Tiffany Blue</h3>
+            <h5>#8DDBE0</h5>
+        </div>
+        <div id="p1-c6">
+            <h3>Carribean Current</h3>
+            <h5>#16697A</h5>
+        </div>
+        <div id="p1-c7">
+            <h3>Moonstone</h3>
+            <h5>#489FB5</h5>
+        </div>
+        <div id="p1-c8">
+            <h3>Sky blue</h3>
+            <h5>#82C0CC</h5>
+        </div>
+        <div id="p1-c9">
+            <h3>Isabelline</h3>
+            <h5>#EDE7E3</h5>
         </div>
     </body>
  </html>
