--- a/exercises/upside-down-tetris/index.html
+++ b/exercises/upside-down-tetris/index.html
@@ -13,13 +13,13 @@
             <div id="right-wall"></div>
             <div id="block-area">
                 <!-- ADD YOUR HTML CODE INSIDE OF THIS DIV-->
-                 <div class="tetris-block"></div>
+                 <div class="tetris-block red "></div>
                  <div class="tetris-block red"></div>
-                 <div class="tetris-block"></div>
-                 <div class="tetris-block"></div>
-                 <div class="tetris-block"></div>
-                 <div class="tetris-block"></div>
-                 <div class="tetris-block"></div>
+                 <div class="tetris-block blue"></div>
+                 <div class="tetris-block blue"></div>
+                 <div class="tetris-block blue "></div>
+                 <div class="tetris-block green"></div>
+                 <div class="tetris-block green"></div>
                  <div class="tetris-block"></div>
                  <div class="tetris-block"></div>
                  <div class="tetris-block"></div>
