product-showcase-site

--- a/product-showcase-site/index.html
+++ b/product-showcase-site/index.html
@@ -7,32 +7,35 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="single column">
-            <h1>Leather Tall Heeled Boots<h1>
-               
-            <img 
-                src="images/heeled boot.webp" 
-                alt="heeled boot" 
-                width="500px"
-            >
+        <div class="single-column-1">
+            <div class="heeled-boot">
+                <h1 id="h1-1">Leather Tall Heeled Boots<h1>
+                <img 
+                    src="images/heeled boot.webp" 
+                    alt="heeled boot" 
+                    width="500px"
+                >
+            </div>
         </div>
-        <div class="single column">
-            <h1>Smooth Leather Platforms</h1>
-            <img 
-                src="images/boot.webp" 
-                alt="boot" 
-                width="500px"
-            >
+        <div class="single-column-2">
+            <div class="boot">
+                <h1 id="h1-2">Smooth Leather Platforms</h1>
+                <img 
+                    src="images/boot.webp" 
+                    alt="boot" 
+                    width="500px"
+                >
+            </div>
         </div>
-        <div class="single column">
-            <h1> Leather Platform Casual Shoes</h1>
-            <img 
-                src="images/platform shoe.webp" 
-                alt="platform shoe" 
-                width="500px"
-            >
-        </div>
-
-        
+        <div class="single-column-3">
+            <div class="platform-shoe">
+                <h1 id="h1-3"> Leather Platform Casual Shoes</h1>
+                <img 
+                    src="images/platform shoe.webp" 
+                    alt="platform shoe" 
+                    width="500px"
+                >
+            </div>
+        </div> 
     </body>
-    </html>
+</html>
