mebay-product-page

--- a/metube/index.html
+++ b/metube/index.html
@@ -32,74 +32,79 @@
             </div>
             <div id="main">
                 <div class="youtube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">YouTube Video Title</a></h4>
+                    <img 
+                        src="images/travel tips.jpg"
+                        alt="travel tips"
+                    >
+                    <h4><a href="#">Travel Tips</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Tips</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
-                            <span class="video-post">8 Hours ago</span>
+                            <span class="video-post">5 Hours ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="youtube-item">
                     <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">YouTube Video Title</a></h4>
+                    <h4><a href="#">What to Know About Universal 
+                        Studios</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Universal Studios</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
-                            <span class="video-post">8 Hours ago</span>
+                            <span class="video-post">2 Hours ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="youtube-item">
                     <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">YouTube Video Title</a></h4>
+                    <h4><a href="#">My Experience At Jurassic Park</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">My Experience At Jurassic 
+                            Park </div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
-                            <span class="video-post">8 Hours ago</span>
+                            <span class="video-post">8 min ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="youtube-item">
                     <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">YouTube Video Title</a></h4>
+                    <h4><a href="#">Tips to Know When Traveling</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Traveling Tips</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
-                            <span class="video-post">8 Hours ago</span>
+                            <span class="video-post">6 Hours ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="youtube-item">
                     <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">YouTube Video Title</a></h4>
+                    <h4><a href="#">My Time At Hogwarts</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">My Experience</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
-                            <span class="video-post">8 Hours ago</span>
+                            <span class="video-post">3 Hours ago</span>
                         </div>
                     </div>
                 </div>
                 <div class="youtube-item">
                     <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">YouTube Video Title</a></h4>
+                    <h4><a href="#">Things To Have When Traveling</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Channel Placeholder</div>
+                        <div class="video-channel">Things I Need </div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
-                            <span class="video-post">8 Hours ago</span>
+                            <span class="video-post">18 Hours ago</span>
                         </div>
                     </div>
                 </div>
