mebay-product-page

--- a/mebay-product-page/index.html
+++ b/mebay-product-page/index.html
@@ -12,26 +12,42 @@
                 <img 
                     src="images/headphone1.webp"
                     alt="headphones1"
+                    id="pic1"
                 >
                 <img
                     src="images/headphone2.webp"
                     alt="headphone2"
+                    id="pic2"
                 >
                 <img
                     src="images/headphone3.webp"
                     alt="headphone3"
+                    id="pic3"
                 >
                 <img
                     src="images/headphone4.webp"
                     alt="headphone4"
+                    id="pic4"
                 >
             </div>
             <div id="column-two">
                 <img src="images/headphone1.webp" alt="headphone 1">
             </div>
             <div id="column-three">
-                Bose QuietComfort Ultra Noise Cancelling Headphones, 
-                Certified Refurbished
+                <h1>Bose QuietComfort Ultra Noise Cancelling Headphones, 
+                Certified Refurbished</h1>
+                <h4> Bose</h4>
+                <h4> <span>96.3% positive</span> &bull; <span>
+                    Seller's other items</span> &bull;<span> Contact seller
+                         </span> </h4>
+                <h3>US $280.00 </h3>
+                <h3>Condition:Certified - Refurbished</h3>
+                <ul>
+                    <h2>Buy It Now</h2> 
+                    <p id="Add-to-cart">Add in cart</p>
+                    <p id="Add-to-watchlist">Add to Watchlist</p>
+                </ul>
+
             </div>
         </div>   
     </body>
