--- a/metube/index.html
+++ b/metube/index.html
@@ -33,10 +33,11 @@
             <div id="main">
                 <div class="youtube-item">
                     <img 
-                        src="images/travel tips.jpg"
+                        src="images/traveling goods.jpg"
                         alt="travel tips"
                     >
-                    <h4><a href="#">Travel Tips</a></h4>
+                    <h4><a href="#">The best items to have when traveling / 
+                        What They don't tell you</a></h4>
                     <div class="video-details">
                         <div class="video-channel">Tips</div>
                         <div class="views-and-post">
@@ -46,8 +47,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item">
-                    <div class="thumbnail-placeholder"></div>
+                <div class="youtube-item-2">
+                    <img 
+                        src="images/universal studios.jpg"
+                        alt="universal studios"
+                    >
                     <h4><a href="#">What to Know About Universal 
                         Studios</a></h4>
                     <div class="video-details">
@@ -59,8 +63,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item">
-                    <div class="thumbnail-placeholder"></div>
+                <div class="youtube-item-3">
+                    <img 
+                        src="images/jurassic park.jpg"
+                        alt="Jurassic park"
+                    >
                     <h4><a href="#">My Experience At Jurassic Park</a></h4>
                     <div class="video-details">
                         <div class="video-channel">My Experience At Jurassic 
@@ -72,11 +79,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item">
-                    <div class="thumbnail-placeholder"></div>
+                <div class="youtube-item 4">
+                    <img 
+                        src="images/reasons to travel .jpg"
+                        alt="travel reasons"
+                    >
                     <h4><a href="#">Tips to Know When Traveling</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Traveling Tips</div>
+                        <div class="video-channel">Traveling tips</div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
@@ -84,8 +94,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item">
-                    <div class="thumbnail-placeholder"></div>
+                <div class="youtube-item 5">
+                    <img 
+                        src="images/hogwarts.jpg"
+                        alt="hogwarts"
+                    >
                     <h4><a href="#">My Time At Hogwarts</a></h4>
                     <div class="video-details">
                         <div class="video-channel">My Experience</div>
@@ -96,11 +109,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item">
-                    <div class="thumbnail-placeholder"></div>
-                    <h4><a href="#">Things To Have When Traveling</a></h4>
+                <div class="youtube-item 6">
+                    <img 
+                        src="images/krustyland.jpg"
+                        alt="travel"
+                    >
+                    <h4><a href="#">My Time in Krustyland</a></h4>
                     <div class="video-details">
-                        <div class="video-channel">Things I Need </div>
+                        <div class="video-channel">Places to Visit </div>
                         <div class="views-and-post">
                             <span class="video-views">1.9k views</span>
                             &bull;
