--- a/metube/index.html
+++ b/metube/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item-2">
+                <div class="youtube-item">
                     <img 
                         src="images/universal studios.jpg"
                         alt="universal studios"
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item-3">
+                <div class="youtube-item">
                     <img 
                         src="images/jurassic park.jpg"
                         alt="Jurassic park"
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item 4">
+                <div class="youtube-item">
                     <img 
                         src="images/reasons to travel .jpg"
                         alt="travel reasons"
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item 5">
+                <div class="youtube-item">
                     <img 
                         src="images/hogwarts.jpg"
                         alt="hogwarts"
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="youtube-item 6">
+                <div class="youtube-item">
                     <img 
                         src="images/krustyland.jpg"
                         alt="travel"
