--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hero - Right (flex column + position)</title>
+        <title>Jim's Portfolio</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
