--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
         <div id="hero-2">
             <h2>Photos By Jim</h2>
                 <div class="image-container">
-                    <a href="#">VIEW GALLERY</a>
+                    <a href="#VIEW GALLERY">VIEW GALLERY</a>
                 </div>
         </div>
     </body>
@@ -41,42 +41,44 @@
             </p>
             <h2>The Gallery</h2>
             <div class="Horizontal-masonary-gallery">
-                <img
-                    src="images/urban-10bn7.jpg"
-                    alt="street view from a bridge"
-                >
-                <img
-                    src="images/urban-11n8m.jpg"
-                    alt="alley"
-                 >
-                <img
-                    src="images/urban-12w82.jpg"
-                    alt="street with taxi's and people"
-                >
-                <img
-                    src="images/urban-13n8n.jpg"
-                    alt="alley with benches"
-                >
-                <img
-                    src="images/urban-14h7y.jpg"
-                    alt="empty alley way with one man"
-                >
-                <img
-                    src="images/urban-15r57.jpg"
-                    alt="staircase"
-                >
-                <img
-                    src="images/urban-16ij4.jpg"
-                    alt="subway"
-                >
-                <img
-                    src="images/urban-17c5x.jpg"
-                    alt="subway tracks"
-                >
-                <img
-                    src="images/urban-18q12.jpg"
-                    alt="empty street at night"
-                >
+                <div id="VIEW GALLERY">
+                    <img
+                        src="images/urban-10bn7.jpg"
+                        alt="street view from a bridge"
+                    >
+                    <img
+                        src="images/urban-11n8m.jpg"
+                        alt="alley"
+                    >
+                    <img
+                        src="images/urban-12w82.jpg"
+                     alt="street with taxi's and people"
+                    >
+                    <img
+                        src="images/urban-13n8n.jpg"
+                        alt="alley with benches"
+                    >
+                    <img
+                        src="images/urban-14h7y.jpg"
+                        alt="empty alley way with one man"
+                    >
+                    <img
+                        src="images/urban-15r57.jpg"
+                        alt="staircase"
+                    >
+                    <img
+                        src="images/urban-16ij4.jpg"
+                        alt="subway"
+                    >
+                    <img
+                        src="images/urban-17c5x.jpg"
+                        alt="subway tracks"
+                    >
+                    <img
+                        src="images/urban-18q12.jpg"
+                        alt="empty street at night"
+                    >
+                </a>
             </div>
         </div>
     </body>
@@ -92,7 +94,7 @@
     </head>
     <body>
         <div id="card section">
-            <div class="single-column card-container">
+            <div class="single-column-card-container">
                 <div class="card">
                     <h2>About</h2>
                     <a href="#">Learn More</a>
