--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,22 +9,10 @@
     <body>
         <div id="hero-2">
             <h2>Photos By Jim</h2>
-                <div class="image-container">
-                    <a href="#VIEW GALLERY">VIEW GALLERY</a>
-                </div>
+            <div class="image-container">
+                <a href="#VIEW GALLERY">VIEW GALLERY</a>
+            </div>
         </div>
-    </body>
-    </html>
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gallery - Horizontal Masonry (flex)</title>
-        <link href="css/page0.css" rel="stylesheet">
-    </head>
-    <body>
         <div id="layout">
             <h1> Jim's Gallery</h1>
             <p> 
@@ -36,63 +24,50 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Laudantium culpa excepturi ea eius ipsa ut alias unde.
-                 Blanditiis eaque nostrum, magni vel quae rem voluptatem 
-                 iusto voluptate? Omnis, dignissimos sit?
+                Blanditiis eaque nostrum, magni vel quae rem voluptatem 
+                iusto voluptate? Omnis, dignissimos sit?
             </p>
             <h2>The Gallery</h2>
-            <div class="Horizontal-masonary-gallery">
-                <div id="VIEW GALLERY">
-                    <img
-                        src="images/urban-10bn7.jpg"
-                        alt="street view from a bridge"
-                    >
-                    <img
-                        src="images/urban-11n8m.jpg"
-                        alt="alley"
-                    >
-                    <img
-                        src="images/urban-12w82.jpg"
-                     alt="street with taxi's and people"
-                    >
-                    <img
-                        src="images/urban-13n8n.jpg"
-                        alt="alley with benches"
-                    >
-                    <img
-                        src="images/urban-14h7y.jpg"
-                        alt="empty alley way with one man"
-                    >
-                    <img
-                        src="images/urban-15r57.jpg"
-                        alt="staircase"
-                    >
-                    <img
-                        src="images/urban-16ij4.jpg"
-                        alt="subway"
-                    >
-                    <img
-                        src="images/urban-17c5x.jpg"
-                        alt="subway tracks"
-                    >
-                    <img
-                        src="images/urban-18q12.jpg"
-                        alt="empty street at night"
-                    >
-                </a>
+            <div id="VIEW GALLERY" class="gallery">
+                <img
+                    src="images/urban-10bn7.jpg"
+                    alt="street view from a bridge"
+                >
+                <img
+                    src="images/urban-11n8m.jpg"
+                    alt="alley"
+                >
+                <img
+                    src="images/urban-12w82.jpg"
+                    alt="street with taxi's and people"
+                >
+                <img
+                    src="images/urban-13n8n.jpg"
+                    alt="alley with benches"
+                >
+                <img
+                    src="images/urban-14h7y.jpg"
+                    alt="empty alley way with one man"
+                >
+                <img
+                    src="images/urban-15r57.jpg"
+                    alt="staircase"
+                >
+                <img
+                    src="images/urban-16ij4.jpg"
+                    alt="subway"
+                >
+                <img
+                    src="images/urban-17c5x.jpg"
+                    alt="subway tracks"
+                >
+                <img
+                    src="images/urban-18q12.jpg"
+                    alt="empty street at night"
+                >
             </div>
         </div>
-    </body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Three Cards</title>
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
+  
         <div id="card section">
             <div class="single-column-card-container">
                 <div class="card">
