themed-gallery-page

--- a/exercises/themed-gallery-page/index.html
+++ b/exercises/themed-gallery-page/index.html
@@ -3,11 +3,28 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Themed</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="hero"
-        
+        <div id="hero">
+            <div class="hero-content">
+                <h2>VACATION GALLERY</h2>
+            </div>
+        </div>
+        <div id="layout">
+            <h1>BORA BORA GALLERY</h1>
+            <div class="cropped-grid-gallery">
+                <img src="images/bora bora 1.jpg" alt="coffee">
+                <img src="images/bora bora 10.jpg" alt="coffee">
+                <img src="images/bora bora 11.jpg" alt="coffee">
+                <img src="images/bora bora 12.jpg" alt="coffee">
+                <img src="images/bora bora 3.jpg" alt="coffee">
+                <img src="images/bora bora 8.jpg" alt="coffee">
+                <img src="images/bora bora 6.jpg" alt="coffee">
+                <img src="images/bora bora 5.jpg" alt="coffee">
+                <img src="images/bora bora 4.jpg" alt="coffee">
+            </div>
+        </div>
     </body>
     </html>
